tests/errors/is_type_second_arg.orus
fn main() {
    print(is_type(1, 2))
}
